--- a/covid_19_analysis/covid_19_overview.Rmd
+++ b/covid_19_analysis/covid_19_overview.Rmd
@@ -24,6 +24,7 @@ library(dplyr)
 library(ggplot2)
 library(tidyverse)
 library(wpp2019)
+library(countrycode)
 ```
 
 ```{r load-data, warning=FALSE, message=FALSE, results='hide'}
@@ -187,6 +188,10 @@ More specifically, we will use the 7-day average daily cases per 100.000 inhabit
 # load the country population data from the wpp2019 package
 data("pop")
 
+# mutate `pop` and `coronavirus` to use the same country names
+pop$name <- countryname(pop$name, destination = "un.name.en")
+coronavirus$country <- countryname(coronavirus$country, destination = "un.name.en")
+
 # calculate the 7-day average daily cases per 100k inhabitants
 country_per_captia_avg.coronavirus <- coronavirus %>% 
   group_by(country) %>% 
@@ -194,12 +199,20 @@ country_per_captia_avg.coronavirus <- coronavirus %>%
   summarise(avg = mean(cases))
 
 country_per_captia_avg.coronavirus <- 
-  merge(country_per_captia_avg.coronavirus, pop, by.x = "country", by.y = "name") %>% 
+  merge(
+    country_per_captia_avg.coronavirus, 
+    pop, 
+    by.x = "country", 
+    by.y = "name",
+    all = FALSE
+  ) %>% 
   select(
     country,
     avg,
     pop_2020 = "2020"
-  ) %>% 
+  ) %>%
+  # omit any NA values since these come from countries that are unknown/not in both datasets
+  na.omit() %>% 
   mutate(
     avg_per_100k = 100000 * avg / (pop_2020 * 1000)
   ) %>% 
@@ -207,8 +220,9 @@ country_per_captia_avg.coronavirus <-
     desc(avg_per_100k)
   )
 
-head(country_per_captia_avg.coronavirus)
+head(country_per_captia_avg.coronavirus, n = 10)
 ```
 
-Some countries seem to be missing from the newly created dataset.
-The problem lies with the fact that `pop` and `coronavirus` use different names for the same country.
+The population (`pop_2020`) is listed in thousands, while the other values are listed in real values.
+As can be seen from the table above, Europe is once again one of the hardest hit countries by the second wave.
+The 10 worst countries in daily confirmed cases per capita are all European.
